# PKP

./: .gitignore  C2SM.cpp  C2SM.hpp  CMakeLists.txt  ModelFactory.cpp  README.md  SFOR.cpp  SFOR.hpp  csv.hpp  input.yml  input_C2SM.yml  main.cpp  model.cpp  model.hpp  pkp.pyx  plotSolution.py  plot_solution.py  reactor.cpp  reactor.hpp  reactort.hpp  runner.cpp  runner.hpp  set_lib_mac.sh  setup.py  test.cpp  test_factory.cpp  test_pkp.py  test_reactorT.cpp
cython/: pkpc.pyx
src/: C2SM.cpp  C2SM.hpp  ModelFactory.cpp  ModelFactory.hpp  ReactorFactory.hpp  SFOR.cpp  SFOR.hpp  csv.hpp  model.cpp  model.hpp  reactor.cpp  reactor.hpp  reactort.hpp
test/: main.cpp  test.cpp  test_factory.cpp  test_reactorT.cpp
